--- a/frontend/src/components/Allreceipt/Allreceipt.css
+++ b/frontend/src/components/Allreceipt/Allreceipt.css
@@ -186,6 +186,14 @@
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
   transition: transform 0.2s;
 }
+.no-receipt-message{
+  text-align: center;
+  color: #432534;
+    font-size: 1.1rem;
+  font-weight: 500;
+  margin-top: 30px;
+
+}
 
 .receipt-row:hover {
   transform: translateY(-2px);
